--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "url": "git+https://github.com/thepika206/intro-to-express-lab.git"
   },
   "author": "",
+  "type": "module",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/thepika206/intro-to-express-lab/issues"
   },
-  "homepage": "https://github.com/thepika206/intro-to-express-lab#readme"
+  "homepage": "https://github.com/thepika206/intro-to-express-lab#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
